[gd_scene load_steps=2 format=3 uid="uid://el5tw70ofsg7"]

[ext_resource type="Script" path="res://scripts/relacionar.gd" id="1_q2gr3"]

[node name="Relacionar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 6.0
offset_right = -1.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2gr3")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 27.0
offset_right = 96.0
offset_bottom = 50.0
text = "pruebas"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 58.0
offset_right = 51.0
offset_bottom = 85.0
scale = Vector2(2.28, 1)

[node name="GridContainerWords" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 108.0
offset_right = 78.0
offset_bottom = 164.0
scale = Vector2(2.52665, 3.28296)
columns = 2

[node name="VBoxEsp" type="VBoxContainer" parent="GridContainerWords"]
layout_mode = 2

[node name="VBoxNau" type="VBoxContainer" parent="GridContainerWords"]
layout_mode = 2
